Added the meta tags for SEO visibility

--- a/Our Properties/index.html
+++ b/Our Properties/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Southern Oaks</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Southern Oaks: building exquisite homes, commercial buildings, and community projects with dedication, quality, and expertise.">
+    <meta name="keywords" content="Southern Oaks, real estate, homes, commercial buildings, community projects, quality construction, professional staff">
+    <meta name="author" content="Southern Oaks">
+    <meta property="og:title" content="Southern Oaks - Quality Real Estate and Construction">
+    <meta property="og:description" content="Discover Southern Oaks: building exquisite homes, commercial buildings, and community projects with dedication, quality, and expertise.">
+    <meta property="og:image" content="https://imagetolink.com/ib/eNdnd6rVPQ">
+    <meta property="og:url" content="https://southernoaks.com.ng">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Southern Oaks - Quality Real Estate and Construction">
+    <meta name="twitter:description" content="Discover Southern Oaks: building exquisite homes, commercial buildings, and community projects with dedication, quality, and expertise.">
+    <meta name="twitter:image" content="https://imagetolink.com/ib/eNdnd6rVPQ">
+    <meta name="twitter:url" content="https://southernoaks.com.ng">
+    <title>Southern Oaks - Quality Real Estate and Construction</title>
       <link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" rel="stylesheet">
