--- a/About Page/index.html
+++ b/About Page/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Southern Oaks</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Southern Oaks: building exquisite homes, commercial buildings, and community projects with dedication, quality, and expertise.">
+    <meta name="keywords" content="Southern Oaks, real estate, homes, commercial buildings, community projects, quality construction, professional staff">
+    <meta name="author" content="Southern Oaks">
+    <meta property="og:title" content="Southern Oaks - Quality Real Estate and Construction">
+    <meta property="og:description" content="Discover Southern Oaks: building exquisite homes, commercial buildings, and community projects with dedication, quality, and expertise.">
+    <meta property="og:image" content="https://imagetolink.com/ib/eNdnd6rVPQ">
+    <meta property="og:url" content="https://southernoaks.com.ng">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Southern Oaks - Quality Real Estate and Construction">
+    <meta name="twitter:description" content="Discover Southern Oaks: building exquisite homes, commercial buildings, and community projects with dedication, quality, and expertise.">
+    <meta name="twitter:image" content="https://imagetolink.com/ib/eNdnd6rVPQ">
+    <meta name="twitter:url" content="https://southernoaks.com.ng">
+    <title>Southern Oaks - Quality Real Estate and Construction</title>
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
     <link rel="shortcut icon" href="/Assets/SouthernOaksLogo.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="./Assets/animations.min.css" type="css"/>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="../Font Awesome 6/fontawesome-free-6.5.2-web/css/all.min.css"
-    />
+    <link rel="stylesheet" href="../Font Awesome 6/fontawesome-free-6.5.2-web/css/all.min.css" />
   </head>
 
   <body>
