--- a/Contact/index.html
+++ b/Contact/index.html
@@ -145,7 +145,7 @@
           <div class="text">
             <h3><span style="font-size: 40px; color: orangered;">Find Us In</span><br>the Real World</h3>
             <div class="textLine"></div>
-            <div class="numbersss" style="margin-top: 40px;">
+            <div class="numbersss">
                 <a href="">
                     <i class="fa-solid fa-location"></i>
                     <p>1A Lumsar Street, Wuse Zone 4, Abuja</p>
